dtls: fix buffer overflow in mac check
This issue was migrated from bug 9512 in our old bug tracker.
Original bug information:
Reporter: Hauke Mehrtens
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: All
Version: Git
Attachments:
0006-dtls-fix-buffer-overflow-in-mac-check.patch: dtls: fix buffer overflow in mac check
dtls-cgm2.pcapng: Example trace
0001-dtls-fix-buffer-overflow-in-mac-check.patch: dtls: fix buffer overflow in mac check
dtls-rsa-cbc.pcapng: DTLS trace with SHA256
0001-ssl-utils-Fix-invalid-read-and-psk-upper-bound.patch: Fix invalid read and correct PSK upper bound