dtls: fix buffer overflow in mac check.  Bug 9512 (https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=9512)

From Hauke Mehrtens

svn path=/trunk/; revision=53842